# bellwether

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bellwether/: __init__.py
bellwether/context/: __init__.py  __main__.py  config.py  discovery.py  documents.py  embedding_run.py  loaders.py  openapi.py  pipeline.py  store.py  vectors.py
bellwether/context/chunking/: __init__.py  markdown.py  models.py  openapi.py  python_ast.py  report.py  router.py  window.py
bellwether/context/embedders/: __init__.py  base.py  hashing.py  hosted.py  local.py
bellwether/context/retrieval/: bm25.py  fusion.py  search.py  tokenize.py
bellwether/context/retrieval/rerank/: __init__.py  base.py  heuristic.py  llm.py
bellwether/eval/: gold.py  metrics.py  pooling.py  report.py
bellwether/llm/: __init__.py  base.py  claude.py  gemini.py
data/gold/: day08-retrieval.json
docs/: index.html
docs/adr/: 0000-adr-template.md  0001-docker-compose-over-kubernetes.md  0002-create-all-over-alembic.md  0003-redis-for-decision-state.md  0004-aggregate-on-read.md  0005-real-failures-not-mocked.md  0006-corpus-as-manifest.md  0007-hosted-embeddings-with-a-local-fallback.md  0008-qdrant-over-chromadb.md  0009-hybrid-retrieval-with-rrf.md  0010-llm-reranking-behind-a-protocol.md
docs/backlog/: substrate-gaps.md
docs/devlog/: day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md  day-08.md
docs/runbooks/: level-0-substrate.md
docs/site/: index.html  level-0.html  the-build.html
docs/standards/: coding-standards.md
docs/superpowers/plans/: 2026-07-20-level0-day1-foundation.md  2026-07-20-level0-day2-campaign-service.md  2026-07-21-level0-day3-ad-decision-service.md  2026-07-21-level0-day4-event-service.md  2026-07-21-level0-day5-traffic-simulator.md  2026-07-21-level1-day6-document-ingestion.md  2026-07-22-level1-day7-chunking-embeddings.md  2026-07-23-level1-day8-hybrid-retrieval.md
docs/superpowers/specs/: 2026-07-20-ads-nexus-design.md  2026-07-20-bellwether-design.md  2026-07-23-day8-hybrid-retrieval-design.md
infra/grafana/provisioning/dashboards/: ads-delivery.json  dashboards.yml  substrate-health.json
infra/grafana/provisioning/datasources/: prometheus.yml
infra/prometheus/: prometheus.yml
platform/: README.md  level0_gate.py
substrate/: __init__.py
substrate/ad_decision_service/: Dockerfile  campaign_client.py  config.py  decisioning.py  main.py  schemas.py  store.py
substrate/campaign_service/: Dockerfile  __init__.py  config.py  db.py  main.py  models.py  schemas.py
substrate/event_service/: Dockerfile  aggregation.py  config.py  db.py  main.py  models.py  schemas.py
substrate/shared/: __init__.py  logging.py  observability.py
substrate/traffic_simulator/: Dockerfile  clients.py  config.py  driver.py  main.py  population.py  scenarios.py  seeding.py
tests/: test_sanity.py
tests/bellwether/context/: test_discovery.py  test_documents.py  test_embedding_run.py  test_loaders.py  test_openapi.py  test_pipeline.py  test_store.py  test_vectors.py
tests/bellwether/context/chunking/: test_chunk_models.py  test_report.py  test_strategies.py
tests/bellwether/context/embedders/: test_embedders.py
tests/bellwether/context/retrieval/: test_bm25.py  test_fusion.py  test_search.py  test_tokenize.py
tests/bellwether/context/retrieval/rerank/: test_heuristic.py  test_llm_reranker.py
tests/bellwether/eval/: test_gold.py  test_metrics.py  test_pooling.py  test_report.py
tests/bellwether/llm/: test_llm.py
tests/infra/: test_grafana_dashboards.py
tests/platform/: test_level0_gate.py
tests/substrate/ad_decision_service/: conftest.py  test_api.py  test_campaign_client.py  test_decisioning.py  test_store.py
tests/substrate/campaign_service/: conftest.py  test_api.py  test_models.py
tests/substrate/event_service/: conftest.py  test_aggregation.py  test_api.py  test_models.py
tests/substrate/shared/: test_logging.py
tests/substrate/traffic_simulator/: conftest.py  test_api.py  test_driver.py  test_population.py  test_scenarios.py  test_seeding.py
