[project]
name = "bellwether"
version = "0.1.0"
description = "AI-native engineering platform for ad-tech teams: context layer, dev & ops agents, orchestration, evals - operating on a mini Netflix-style ads substrate."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency injection is declared in argument defaults by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.ruff.lint.per-file-ignores]
# log_context forwards arbitrary structured fields; typing them would defeat the point.
"substrate/shared/logging.py" = ["ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
# `platform/` is on the path but is not a package (the name shadows a stdlib
# module), so mypy needs telling where level0_gate lives — pytest's pythonpath
# is not visible to it.
mypy_path = "platform"

[tool.pytest.ini_options]
testpaths = ["tests"]
# "platform" is on the path so the gate imports as `level0_gate`. The directory
# cannot be a package: `platform` is a standard-library module name.
pythonpath = [".", "platform"]
addopts = "-q"
